🔧 Compile a minified version of squid.css

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node-sass": "^4.5.2"
   },
   "scripts": {
-    "dist": "node-sass src/squid.sass dist/squid.css",
+    "dist": "node-sass src/squid.sass dist/squid.css && node-sass src/squid.sass --output-style compressed dist/squid.min.css",
     "dev": "node-sass --watch --output dist src"
   },
   "repository": {
