--- a/package.json
+++ b/package.json
@@ -18,11 +18,9 @@
     "css",
     "grid",
     "square",
-    "square",
-    "grid",
+    "square grid",
     "squid",
-    "grid",
-    "system",
+    "grid system",
     "sass"
   ],
   "author": "Mads Færch",
